<!--a. Assignment HW1.
    b. File Name : strings.xml
    c. Full name of all students in your group:(GRP -17)
    1. Naga Vamsi Abhivarsh Peddireddy
    2. Siva Kumar Reddy Vayyeti-->
<resources>
    <string name="app_name">BAC Calculator</string>
    <string name="title_weight">Weight (lbs)</string>
    <string name="hint_weight">Enter Weight</string>
    <string name="female">F</string>
    <string name="male">M</string>
    <string name="title_gender">Gender</string>
    <string name="weight_save">Save</string>
    <string name="drink_size">Drink Size</string>
    <string name="shot">1 oz</string>
    <string name="glass">5 oz</string>
    <string name="can">12 oz</string>
    <string name="alcohol_percen">Alcohol %</string>
    <string name="alcohol_indicator">%</string>
    <string name="add_drink">Add Drink</string>
    <string name="reset">Reset</string>
    <string name="bac_level">BAC Level:</string>
    <string name="your_status">Your Status:</string>
    <string name="safe_limit">You\'re safe</string>
    <string name="normal_limit">Be careful...</string>
    <string name="over_limit">Over the limit!</string>
    <string name="hint_enter_weight">Enter the Weight in lb</string>
    <string name="hint_over_limit">No more drinks for you.</string>
    <string name="hint_saved">weight and gender have been saved!!</string>
</resources>
